[project]
name = "pykn-nov-jam"
version = "0.1.0"
description = ""
authors = [
    {name = "ascii",email = "asciislvt@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kraken-engine (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pykn_nov_jam", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
